analista y desarrollador cultura 2 items actualizados

--- a/index.html
+++ b/index.html
@@ -1941,43 +1941,52 @@
                     `
                 },
                 'analista': {
-                    title: '📊 Analista de Datos',
-                    content: `
-                        <h3>Funciones:</h3>
-                        <ul>
-                            <li>Procesamiento de encuestas (1000+)</li>
-                            <li>Cálculo de índices NIA, BFR, TCC</li>
-                            <li>Visualización de datos</li>
-                            <li>Generación de informes</li>
-                        </ul>
-                        <h3>Perfil requerido:</h3>
-                        <ul>
-                            <li>Estadística, Matemáticas o afines</li>
-                            <li>Excel avanzado, SPSS, R o Python</li>
-                            <li>Capacidad de síntesis</li>
-                        </ul>
-                        <button class="cta-btn" style="margin-top: 1rem;" onclick="showContactForm('analista')">Aplicar</button>
-                    `
-                },
-                'desarrollador': {
-                    title: '🎨 Desarrollador/a Cultural',
-                    content: `
-                        <h3>Tu rol:</h3>
-                        <ul>
-                            <li>Diseño de propuestas culturales</li>
-                            <li>Creación de dispositivos culturales innovadores</li>
-                            <li>Implementación de proyectos comunitarios</li>
-                            <li>Gestión de eventos y festivales</li>
-                        </ul>
-                        <h3>Perfil ideal:</h3>
-                        <ul>
-                            <li>Artistas, gestores, productores culturales</li>
-                            <li>Creatividad y visión comunitaria</li>
-                            <li>Experiencia en proyectos culturales</li>
-                        </ul>
-                        <button class="cta-btn" style="margin-top: 1rem;" onclick="showContactForm('desarrollador')">Sumarme</button>
-                    `
-                },
+                                    title: '📊 Analista de Datos',
+                                    content: `
+                                        <h3>Funciones:</h3>
+                                        <ul>
+                                            <li>Procesamiento de encuestas (1000+)</li>
+                                            <li>Cálculo de índices NIA, BFR, TCC</li>
+                                            <li>Visualización de datos</li>
+                                            <li>Generación de informes</li>
+                                        </ul>
+                                        <h3>Tu rol estratégico:</h3>
+                                        <p>El Guardián de la Métrica: Procesa los datos del Investigador/a y monitorea la salud del Árbol.</p>
+                                        <h3>Retos:</h3>
+                                        <p>Mapeo de la Campana de Gauss: Interpreta la <a href="#metodologia" onclick="closeModal()">realidad económica</a> de los KPI (NIA, BFR, TCC) y visualiza la salud del Árbol para guiar la inversión.</p>
+                                        <h3>Perfil requerido:</h3>
+                                        <ul>
+                                            <li>Estadística, Matemáticas o afines</li>
+                                            <li>Excel avanzado, SPSS, R o Python</li>
+                                            <li>Capacidad de síntesis</li>
+                                        </ul>
+                                        <button class="cta-btn" style="margin-top: 1rem;" onclick="showContactForm('analista')">Aplicar</button>
+                                    `
+                                },
+                
+                                'desarrollador': {
+                                    title: '🎨 Desarrollador/a Cultural',
+                                    content: `
+                                        <h3>Tu rol:</h3>
+                                        <ul>
+                                            <li>Diseño de propuestas culturales</li>
+                                            <li>Creación de dispositivos culturales innovadores</li>
+                                            <li>Implementación de proyectos comunitarios</li>
+                                            <li>Gestión de eventos y festivales</li>
+                                        </ul>
+                                        <h3>Rol Estratégico:</h3>
+                                        <p>El Hacedor de Soluciones: Crea las propuestas y los dispositivos que resuelven los problemas del Árbol (NIA, BFR, TCC).</p>
+                                        <h3>Ingeniería de la Autenticidad:</h3>
+                                        <p>Diseña los <a href="https://www.facebook.com/share/g/17on7GxkaR/" target="_blank" rel="noopener noreferrer">dispositivos</a> (proyectos y soluciones) que garantizan las 4 As y corrigen las fallas del Árbol (NIA, BFR, TCC).</p>
+                                        <h3>Perfil ideal:</h3>
+                                        <ul>
+                                            <li>Artistas, gestores, productores culturales</li>
+                                            <li>Creatividad y visión comunitaria</li>
+                                            <li>Experiencia en proyectos culturales</li>
+                                        </ul>
+                                        <button class="cta-btn" style="margin-top: 1rem;" onclick="showContactForm('desarrollador')">Sumarme</button>
+                                    `
+                                },
                 'patrocinador': {
                     title: '💼 Patrocinador/a',
                     content: `
