es momento de actuar update

--- a/index.html
+++ b/index.html
@@ -1638,7 +1638,7 @@
                 <p style="color: #666; margin-bottom: 1.5rem;">
                     Compártela con nosotros. Las mejores propuestas serán consideradas para el Plan Estratégico Cultural 2026-2030.
                 </p>
-                <button class="cta-btn" onclick="showProposalForm()">Enviar Propuesta</button>
+                <a href="https://forms.gle/wuGYv3A72NMThs8H8" target="_blank" rel="noopener noreferrer" class="cta-btn">Enviar Propuesta</a>
             </div>
         </section>
 
@@ -1766,11 +1766,11 @@
             </p>
             
             <div class="cta-buttons">
-                <button class="cta-btn" onclick="showContactForm('investigar')">🔬 Quiero Investigar</button>
-                <button class="cta-btn" onclick="showContactForm('patrocinar')">💼 Quiero Patrocinar</button>
-                <button class="cta-btn" onclick="showContactForm('voluntario')">🙋 Ser Voluntario</button>
-                <button class="cta-btn" onclick="showContactForm('colaborar')">🤝 Colaborar</button>
-                <button class="cta-btn" onclick="showContactForm('donar')">💝 Donar</button>
+                <a href="https://forms.gle/qNGx3jNW1HX8AK8JA" target="_blank" rel="noopener noreferrer" class="cta-btn" style="text-decoration: none;">🔬 Quiero Investigar</a>
+                <a href="https://forms.gle/qNGx3jNW1HX8AK8JA" target="_blank" rel="noopener noreferrer" class="cta-btn" style="text-decoration: none;">💼 Quiero Patrocinar</a>
+                <a href="https://forms.gle/qNGx3jNW1HX8AK8JA" target="_blank" rel="noopener noreferrer" class="cta-btn" style="text-decoration: none;">🙋 Ser Voluntario</a>
+                <a href="https://forms.gle/qNGx3jNW1HX8AK8JA" target="_blank" rel="noopener noreferrer" class="cta-btn" style="text-decoration: none;">🤝 Colaborar</a>
+                <a href="mailto:diacuaviva@gmail.com" class="cta-btn" style="text-decoration: none;">💝 Donar</a>
             </div>
 
             <!-- QR Code para Registro Rápido -->
@@ -1921,6 +1921,8 @@
                             <li>Relaciones institucionales y alianzas</li>
                             <li>Supervisión de cumplimiento de objetivos</li>
                         </ul>
+                        <h3>Liderazgo Estratégico:</h3>
+                        <p>Liderazgo Estratégico Antifrágil: Unir la ética de las 4 As con la visión de la Campana de Gauss para garantizar la solidez del retorno social (SROI) a los inversores.</p>
                         <h3>Perfil requerido para co-liderazgo:</h3>
                         <ul>
                             <li>Experiencia en gestión cultural o proyectos sociales</li>
@@ -1937,6 +1939,10 @@
                     title: '🔬 Investigador/a',
                     content: `
                         <p>Análisis científico de vanguardia. Te invitamos a poner a prueba la Paradoja Euclidiana: Demuestra cómo los Principios Puros (4 As) sostienen la realidad econométrica (NIA, BFR, TCC) de la <a href="#metodologia" onclick="closeModal()">Metodología Científica Mixta</a>.</p>
+                        <h3>Perfil requerido:</h3>
+                        <ul>
+                            <li>Analista de datos y Desarrollador cultural, certificado por Diacua Viva o Institución competente.</li>
+                        </ul>
                         <button class="cta-btn" style="margin-top: 1rem;" onclick="showContactForm('investigador')">Unirme al equipo</button>
                     `
                 },
@@ -2013,56 +2019,56 @@
                     content: `
                         <h3>Tipos de alianzas:</h3>
                         <ul>
-                            <li><strong>ONGs:</strong> Co-investigación y metodologías</li>
-                            <li><strong>Universidades:</strong> Apoyo académico y estudiantes</li>
-                            <li><strong>Entidades gubernamentales:</strong> Acceso a datos</li>
-                            <li><strong>Organizaciones culturales:</strong> Redes y difusión</li>
+                            <li>ONGs y fundaciones</li>
+                            <li>Universidades y centros de investigación</li>
+                            <li>Medios de comunicación</li>
+                            <li>Gremios y asociaciones</li>
                         </ul>
-                        <h3>Qué ofrecemos:</h3>
+                        <h3>Aliado Estratégico:</h3>
+                        <p>Plataforma de Medición de Impacto: Usa nuestra Metodología Científica para certificar la Autenticidad y el SROI de tus proyectos.</p>
+                        <h3>Beneficios de ser aliado:</h3>
                         <ul>
-                            <li>Visibilidad conjunta</li>
-                            <li>Intercambio de conocimiento</li>
-                            <li>Fortalecimiento de redes</li>
+                            <li>Acceso a datos e investigaciones</li>
+                            <li>Co-creación de proyectos de alto impacto</li>
+                            <li>Visibilidad en nuestra plataforma</li>
                         </ul>
-                        <button class="cta-btn" style="margin-top: 1rem;" onclick="showContactForm('aliado')">Crear alianza</button>
+                        <button class="cta-btn" style="margin-top: 1rem;" onclick="showContactForm('aliado')">Proponer Alianza</button>
                     `
                 },
                 'voluntario': {
-                    title: '🙋 Voluntario/a',
-                    content: `
-                        <h3>Actividades voluntarias:</h3>
-                        <ul>
-                            <li>Aplicación de encuestas en campo</li>
-                            <li>Apoyo logístico en eventos</li>
-                            <li>Transcripción de entrevistas</li>
-                            <li>Difusión en redes sociales</li>
-                            <li>Apoyo en talleres comunitarios</li>
-                        </ul>
-                        <h3>Beneficios:</h3>
-                        <ul>
-                            <li>Certificado de voluntariado</li>
-                            <li>Capacitación en investigación cultural</li>
-                            <li>Networking con profesionales</li>
-                            <li>Experiencia práctica</li>
-                        </ul>
-                        <button class="cta-btn" style="margin-top: 1rem;" onclick="showContactForm('voluntario')">Inscribirme</button>
-                    `
-                },
-                'publico': {
-                    title: '👥 Público General',
-                    content: `
-                        <h3>Cómo participar:</h3>
-                        <ul>
-                            <li><strong>Encuestas:</strong> Comparte tu consumo cultural</li>
-                            <li><strong>Grupos focales:</strong> Participa en conversaciones</li>
-                            <li><strong>Eventos:</strong> Asiste a presentaciones de resultados</li>
-                            <li><strong>Redes:</strong> Sigue y comparte nuestro contenido</li>
-                        </ul>
-                        <h3>Tu voz importa:</h3>
-                        <p>Cada respuesta en las encuestas es un dato que construye el mapa cultural de Villavicencio. Tu participación es esencial para un diagnóstico certero.</p>
-                        <button class="cta-btn" style="margin-top: 1rem;" onclick="showContactForm('publico')">Participar</button>
-                    `
-                }
+                                    title: '🙋 Voluntario/a',
+                                    content: `
+                                        <h3>¿Quiénes pueden ser voluntarios?</h3>
+                                        <ul>
+                                            <li>Colectivos culturales y barriales</li>
+                                            <li>Estudiantes universitarios (trabajo social, tesis)</li>
+                                            <li>Ciudadanía activa con tiempo y compromiso</li>
+                                        </ul>
+                                        <h3>Actividades voluntarias:</h3>
+                                        <ul>
+                                            <li>Apoyo en encuestas y trabajo de campo</li>
+                                            <li>Logística de eventos y ollas comunitarias</li>
+                                            <li>Documentación multimedia (fotos, videos)</li>
+                                        </ul>
+                                        <h3>Agente de los 4 Ases en Campo:</h3>
+                                        <p>Garantiza la Autenticidad de los datos y el Altruismo en las comunidades. Conecta la teoría (NIA/BFR) con la experiencia humana.</p>
+                                        <button class="cta-btn" style="margin-top: 1rem;" onclick="showContactForm('voluntario')">Quiero ser Voluntario</button>
+                                    `
+                                },
+                
+                                'publico': {
+                                    title: '👥 Público General',
+                                    content: `
+                                        <h3>¿Cómo participar?</h3>
+                                        <ul>
+                                            <li>Respondiendo nuestras encuestas</li>
+                                            <li>Asistiendo a los eventos culturales</li>
+                                            <li>Siguiendo y compartiendo en redes sociales</li>
+                                            <li>Aportando ideas y propuestas</li>
+                                        </ul>
+                                        <a href="https://www.facebook.com/share/g/1A1QZVyuDx/" target="_blank" rel="noopener noreferrer" class="cta-btn" style="margin-top: 1rem; text-decoration: none;">Participar</a>
+                                    `
+                                }
             };
 
             const roleData = roles[role];
