dispositivos sensores culturales y relámpagos

--- a/index.html
+++ b/index.html
@@ -1059,6 +1059,9 @@
                     <div class="accordion-content">
                         <ul style="padding-left: 2rem;">
                             <li><strong>1000+ encuestas</strong> a ciudadanos</li>
+                            <li><strong>Dispositivos sensores</strong> Sistema de Votación con botones en un evento</li>
+                            <li>
+                            <strong>Dispositivo Culturales Relampago</strong> Una caminata por una zona de interés donde se mide el flujo de personas. <br> O Un punto de información donde los ciudadanos pueden registrar su opinión sobre un tema específico.</li>
                             <li><strong>15 grupos focales</strong> con agentes clave</li>
                             <li><strong>20 entrevistas a profundidad</strong></li>
                             <li>Cartografía social de zonas culturales</li>
