--- a/index.html
+++ b/index.html
@@ -1774,7 +1774,50 @@
                 <a href="https://forms.gle/qNGx3jNW1HX8AK8JA" target="_blank" rel="noopener noreferrer" class="cta-btn" style="text-decoration: none;">💼 Quiero Patrocinar</a>
                 <a href="https://forms.gle/qNGx3jNW1HX8AK8JA" target="_blank" rel="noopener noreferrer" class="cta-btn" style="text-decoration: none;">🙋 Ser Voluntario</a>
                 <a href="https://forms.gle/qNGx3jNW1HX8AK8JA" target="_blank" rel="noopener noreferrer" class="cta-btn" style="text-decoration: none;">🤝 Colaborar</a>
-                <a href="mailto:diacuaviva@gmail.com" class="cta-btn" style="text-decoration: none;">💝 Donar</a>
+                <button onclick="openDonateModal()" class="cta-btn" style="text-decoration: none; background: #e67e22; color: #fff; border: none; cursor: pointer;">💝 Donar</button>
+            <!-- Modal Donar -->
+            <div id="donateModal" style="display:none; position: fixed; z-index: 9999; left: 0; top: 0; width: 100vw; height: 100vh; background: rgba(0,0,0,0.45); overflow-y: auto;">
+                <div style="background: #fff; max-width: 420px; margin: 5vh auto 5vh auto; border-radius: 16px; box-shadow: 0 8px 32px rgba(0,0,0,0.18); padding: 2.2rem 2rem 1.5rem 2rem; position: relative; text-align: center; top: 0; transform: none; overflow-y: auto; max-height: 90vh;">
+                    <button onclick="closeDonateModal()" style="position: absolute; top: 1.1rem; right: 1.1rem; background: none; border: none; font-size: 1.7rem; color: #e67e22; cursor: pointer;">&times;</button>
+                    <h3 style="color: #e67e22; margin-bottom: 1.2rem;">Apoya la Cultura</h3>
+                    <p style="color: #444; font-size: 1.05rem; margin-bottom: 1.2rem;">Puedes donar a través de nuestra cuenta o usando el código QR. ¡Gracias por tu apoyo!</p>
+                    <img src="davi_plata.png" alt="QR Donar" style="width: 130px; height: 80px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.12); margin-bottom: 1rem;">
+                    <div style="margin-bottom: 1.2rem;">
+                        <strong>BREB / DaviPlata:</strong><br>
+                        317 424 7923<br>
+                        <button onclick="copyAccount()" style="margin-top: 0.5rem; background: #27ae60; color: #fff; border: none; border-radius: 20px; padding: 0.4rem 1.2rem; font-size: 0.98rem; cursor: pointer;">Copiar número</button>
+                    </div>
+                    <!-- Botón verde vibrante para plataforma de pago principal -->
+                    <a href="https://www.mipagocultural.com/diacuaviva" target="_blank" class="cta-btn" style="background: #27ae60; color: #fff; margin-bottom: 0.7rem; display: inline-block; font-weight: 700; font-size: 1.08rem; box-shadow: 0 2px 8px rgba(39,174,96,0.12);">Ir a plataforma de pago</a>
+                    <!-- Opción BREB/DaviPlata visible, otras opciones eliminadas hasta nuevo aviso -->
+                    <button onclick="shareQR()" style="margin-top: 0.7rem; background: #4267B2; color: #fff; border: none; border-radius: 20px; padding: 0.4rem 1.2rem; font-size: 0.98rem; cursor: pointer;">Compartir QR</button>
+                </div>
+            </div>
+            <script>
+            function openDonateModal() {
+                document.getElementById('donateModal').style.display = 'block';
+                document.body.style.overflow = 'hidden';
+            }
+            function closeDonateModal() {
+                document.getElementById('donateModal').style.display = 'none';
+                document.body.style.overflow = '';
+            }
+            function copyAccount() {
+                navigator.clipboard.writeText('317 424 7923');
+                alert('Número copiado: 317 424 7923');
+            }
+            function shareQR() {
+                if (navigator.share) {
+                    navigator.share({
+                        title: 'Donar a DIACUA VIVA',
+                        text: 'Apoya la cultura de Villavicencio. Escanea este QR para donar.',
+                        url: window.location.origin + '/qr-donacion.png'
+                    });
+                } else {
+                    alert('Para compartir el QR, descarga la imagen y compártela manualmente.');
+                }
+            }
+            </script>
             </div>
 
             <!-- QR Code para Registro Rápido -->
