--- a/404.html
+++ b/404.html
@@ -23,6 +23,7 @@
             margin: 0;
             text-align: center;
             padding: 20px;
+            overflow: hidden;
         }
         h1 {
             font-size: 6rem;
@@ -65,6 +66,16 @@
             50% { transform: translateY(-10px); }
             100% { transform: translateY(0px); }
         }
+        .falling-leaf {
+            position: fixed;
+            top: -10%;
+            z-index: -1;
+            user-select: none;
+            animation: fall linear infinite;
+        }
+        @keyframes fall {
+            to { transform: translateY(110vh) rotate(720deg); }
+        }
     </style>
 </head>
 <body>
@@ -76,5 +87,23 @@
         Pero no te preocupes, las raíces siguen fuertes.
     </p>
     <a href="index.html" class="btn">Volver al Ecosistema</a>
+
+    <script>
+        function createLeaves() {
+            const leaves = ['🍂', '🍃', '🍁', '🌿'];
+            for(let i=0; i<20; i++) {
+                const leaf = document.createElement('div');
+                leaf.className = 'falling-leaf';
+                leaf.textContent = leaves[Math.floor(Math.random() * leaves.length)];
+                leaf.style.left = Math.random() * 100 + 'vw';
+                leaf.style.animationDuration = Math.random() * 5 + 5 + 's';
+                leaf.style.animationDelay = Math.random() * 5 + 's';
+                leaf.style.fontSize = Math.random() * 20 + 20 + 'px';
+                leaf.style.opacity = Math.random() * 0.5 + 0.3;
+                document.body.appendChild(leaf);
+            }
+        }
+        createLeaves();
+    </script>
 </body>
 </html>
