DOCUMENTO RESULTADOS DIAGNOSTICO LABORATORIO

--- a/index.html
+++ b/index.html
@@ -2375,7 +2375,7 @@
 
             <div class="footer-section">
                 <h3>Recursos</h3>
-                <a href="#" onclick="alert('Próximamente')">Documentos</a>
+                <a href="RESULTADOS DEL PRIMER DIAGNOSTICO SINTOMATICO ELABORADO POR DIACUA VIVA EN LABORATORIO.pdf" target="_blank" rel="noopener noreferrer">Documentos</a>
                 <a href="#" onclick="alert('Próximamente')">Investigaciones</a>
                 <a href="#" onclick="alert('Próximamente')">Multimedia</a>
                 <a href="#" onclick="alert('Próximamente')">Prensa</a>
