update sponsors nexus  passio vertice slb innova manage

--- a/index.html
+++ b/index.html
@@ -2295,12 +2295,18 @@
             
             <div class="sponsors-grid">
                 <!-- Logos Reales -->
+                <img src="logo nexus.png" alt="neus lab gestion digital" class="sponsor-img">
                 <img src="logo_alcaldia.png" alt="Alcaldía de Villavicencio" class="sponsor-img">
+                <img src="logo slb.png" alt="slb mapa global Stipulation Logic Business" class="sponsor-img">
                 <img src="logo_unillanos.png" alt="Universidad de los Llanos" class="sponsor-img">
+                <img src="logo_casa_meta.png" alt="Casa Meta" class="sponsor-img">
+                <img src="logo innova manager.png" alt="innova manager" class="sponsor-img">
+                 <img src="logo_gobernación.png" alt="Gobernación del Meta" class="sponsor-img">
                 <img src="logo_teopol.png" alt="Teopolítica" class="sponsor-img">
                 <img src="ekine logo 3.png" alt="Ekine" class="sponsor-img">
                 <img src="mini_dominion.png" alt="Dominion Natura" class="sponsor-img">
                 <img src="logo_sena.png" alt="SENA" class="sponsor-img">
+                <img src="log_passio_vertice.png" alt="passio Vertice" class="sponsor-img">
             </div>
 
             <div style="text-align: center; margin-top: 2rem;">
