pdf terminos de referencia e imagen buque

--- a/index.html
+++ b/index.html
@@ -1963,17 +1963,27 @@
                         <span class="arrow">▼</span>
                     </div>
                     <div class="accordion-content">
-                        <ul style="padding-left: 2rem; list-style-type: none;">
-                            <li><a href="TERMINOS_DE_REFERENCIA.pdf" target="_blank" rel="noopener noreferrer">📄 Términos de Referencia de la Convocatoria</a></li>
-                            <li style="margin-top: 1rem;"><a href="https://diacuaviva.blogspot.com/" target="_blank" rel="noopener noreferrer">📰 Blog de actualidad cultural</a></li>
-                            <li style="margin-top: 1rem;">
-                                🗓️ Calendario de eventos y convocatorias
-                                <div id="convocatoria-arpas" style="margin-top: 1rem; padding: 1.5rem; background: #fcfcfc; border: 1px solid #eee; border-radius: 10px;">
-                                    <h4 style="color: var(--primary); margin-top: 0; font-size: 1.3rem; border-bottom: 2px solid var(--accent); padding-bottom: 0.5rem; margin-bottom: 1rem;">CONVOCATORIA: ARPAS LLANERAS</h4>
-                                    <p><strong>Oasis de Prototipos: Rutas de Acción DIACUA VIVA.</strong> Hemos diseñado tres rutas maestras para que elijas dónde quieres sembrar tu palabra:</p>
-                                    
-                                    <div style="margin-bottom: 1rem;">
-                                        <h5>1. Ruta de la Resonancia (Eventos de Concurrencia Masiva)</h5>
+                        <div style="display: flex; align-items: flex-start;">
+                            <ul style="padding-left: 2rem; list-style-type: none; flex: 1;">
+                                <li><h4 style="color: var(--primary); margin-top: 0; font-size: 1.3rem; border-bottom: 2px solid var(--accent); padding-bottom: 0.5rem; margin-bottom: 1rem;">TÉRMINOS DE REFERENCIA: ARPAS LLANERAS</h4></li>
+                                <li style="margin-top: 0.5rem;"><a href="TDR  FOLCLOR AL PARQUE.pdf" target="_blank" rel="noopener noreferrer">🎶 TDR Folclor al Parque</a></li>
+                                <li style="margin-top: 0.5rem;"><a href="📄 TDR Términos de Referencia GASTROJOROPO CONVOCATORIA BUQUE DIACUA VIVA.pdf" target="_blank" rel="noopener noreferrer">🍲 TDR Gastrojoropo</a></li>
+                                <li style="margin-top: 0.5rem;"><a href="📜 TDR CUENTERIA POESIA VERBENA LLANERA.pdf" target="_blank" rel="noopener noreferrer">📖 TDR Cuentería, Poesía y Verbena Llanera</a></li>
+                                <li style="margin-top: 0.5rem;"><a href="📸 TDR GALERIA AUDIOVISUAL BUQUE DIACUA VIVA.pdf" target="_blank" rel="noopener noreferrer">🎥 TDR Galería Audiovisual</a></li>
+                                <li style="margin-top: 1rem;"><a href="https://diacuaviva.blogspot.com/" target="_blank" rel="noopener noreferrer">📰 Blog de actualidad cultural</a></li>
+                                <li style="margin-top: 1rem;">
+                                    🗓️ Calendario de eventos y convocatorias
+                                    <div id="convocatoria-arpas" style="margin-top: 1rem; padding: 1.5rem; background: #fcfcfc; border: 1px solid #eee; border-radius: 10px;">
+                                        <h4 style="color: var(--primary); margin-top: 0; font-size: 1.3rem; border-bottom: 2px solid var(--accent); padding-bottom: 0.5rem; margin-bottom: 1rem;">CONVOCATORIA: ARPAS LLANERAS</h4>
+                                        <p><strong>Oasis de Prototipos: Rutas de Acción DIACUA VIVA.</strong> Hemos diseñado tres rutas maestras para que elijas dónde quieres sembrar tu palabra:</p>
+                                        <div style="margin-bottom: 1rem;">
+                                            <h5>1. Ruta de la Resonancia (Eventos de Concurrencia Masiva)</h5>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                            <img src="buque DIACUA VIVA.png" alt="Buque DIACUA VIVA" style="max-width: 120px; margin-left: 2rem; margin-top: 0.5rem; opacity: 0.85; border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.08);" />
+                        </div>
                                         <p><strong>Prototipos:</strong> Folclor al Parque, Joropo Relámpago.<br><strong>Propósito:</strong> Conexión cultural pura para el artista que busca el aplauso del pueblo y la visibilidad.</p>
                                     </div>
 
@@ -2401,6 +2411,9 @@
                 <img src="mini_dominion.png" alt="Dominion Natura" class="sponsor-img">
                 <img src="logo_sena.png" alt="SENA" class="sponsor-img">
                 <img src="log_passio_vertice.png" alt="passio Vertice" class="sponsor-img">
+                    <div style="grid-column: 1 / -1; display: flex; justify-content: center;">
+                        <img src="logo_fundacyt.png" alt="logo_fundacyt" class="sponsor-img">
+                    </div>
             </div>
 
             <div style="text-align: center; margin-top: 2rem;">
