--- a/index.html
+++ b/index.html
@@ -1261,15 +1261,15 @@
             <div class="accordion">
                 <div class="accordion-item">
                     <div class="accordion-header" onclick="toggleAccordion(this)">
-                        <span>💡 Gestión y Apoyo a Comunidades: Metodología TRAGALUZ</span>
+                        <span>💡 Gestión y Apoyo a Comunidades: Metodología TATTRA LERIGEM</span>
                         <span class="arrow">▼</span>
                     </div>
                     <div class="accordion-content">
                         <h2 style="color: var(--primary); text-align: center; margin-bottom: 1.5rem;">Gestión y Apoyo a Comunidades</h2>
                         <p style="text-align: center; font-size: 1.15rem; max-width: 700px; margin: 0 auto 1.5rem auto; color: #333;">
-                            <strong>TRAGALUZ</strong> es una metodología de acompañamiento y dinamización para asociaciones, colectivos y comunidades. Está en desarrollo porque se construye a la medida de las necesidades, requerimientos y oportunidades de cada grupo.<br>
+                            <strong>TATTRA LERIGEM </strong> es una metodología de acompañamiento, apoyo, optimización y gestión de reursos para  dinamizar asociaciones, colectivos y comunidades. Está en desarrollo porque se construye a la medida de las necesidades, requerimientos y oportunidades de cada grupo.<br>
                             El proceso abarca desde el diagnóstico y la identificación de requerimientos, hasta la contratación, validación, certificación, formas de pago, transparencia y garantías.<br>
-                            <span style="color: #6b9b37; font-weight: 600;">¿Quieres impulsar tu colectivo? ¡Participa en la co-creación de soluciones reales y ágiles!</span>
+                            <span style="color: #6b9b37; font-weight: 600;">¿Quieres impulsar tu colectivo? ¡Participa en la co-creación de soluciones reales y ágiles! Y si alguien pregunta por la fuerza de TATTRA LERIGEM... el misterio que solo se entiende                     cuando el sol entra por el tragaluz de la conciencia. ¡Amén y Berraquera!"</span>
                         </p>
                         <div style="margin: 2rem 0;">
                             <h3 style="color: var(--accent); text-align: center;">8 Interacciones Culturales TRAGALUZ</h3>
