update documentos recursos pie de pagina

--- a/index.html
+++ b/index.html
@@ -2491,8 +2491,8 @@
 
             <div class="footer-section">
                 <h3>Recursos</h3>
-                <a href="RESULTADOS DEL PRIMER DIAGNOSTICO SINTOMATICO ELABORADO POR DIACUA VIVA EN LABORATORIO.pdf" target="_blank" rel="noopener noreferrer">Documentos</a>
-                <a href="#" onclick="alert('Próximamente')">Investigaciones</a>
+                                <a href="TATTRA LERIGEM.pdf" target="_blank" rel="noopener noreferrer">TATTRA LERIGEM (PDF)</a>
+                <a href="RESULTADOS DEL PRIMER DIAGNOSTICO SINTOMATICO ELABORADO POR DIACUA VIVA EN LABORATORIO.pdf" target="_blank" rel="noopener noreferrer">Investigación: Primer Diagnóstico Sintomático (PDF)</a>
                 <a href="#" onclick="alert('Próximamente')">Multimedia</a>
                 <a href="#" onclick="alert('Próximamente')">Prensa</a>
             </div>
