--- a/index.html
+++ b/index.html
@@ -1285,7 +1285,9 @@
                             </ol>
                         </div>
                         <div style="text-align: center; margin: 2rem 0 1rem 0;">
-                            <a href="https://casameta.onrender.com/" target="_blank" rel="noopener noreferrer" class="cta-btn" style="background: #6b9b37; color: white; font-size: 1.1rem; border-radius: 30px; padding: 1rem 2.2rem; text-decoration: none; font-weight: 600; box-shadow: 0 2px 8px rgba(0,0,0,0.08);">Explora CASA META (Recurso Piloto)</a>
+                            <a href="https://casameta.onrender.com/" target="_blank" rel="noopener noreferrer" class="cta-btn" style="background: #6b9b37; color: white; font-size: 1.1rem; border-radius: 30px; padding: 1rem 2.2rem; text-decoration: none; font-weight: 600; box-shadow: 0 2px 8px rgba(0,0,0,0.08); margin-bottom: 1rem;">Explora CASA META (Recurso Piloto)</a>
+
+                            <a href="https://forms.gle/K9NwYdWZ7v2Krve87" target="_blank" rel="noopener noreferrer" class="cta-btn" style="background: #2d5016; color: #fff; font-size: 1.1rem; border-radius: 30px; padding: 1rem 2.2rem; text-decoration: none; font-weight: 600; box-shadow: 0 2px 8px rgba(0,0,0,0.10); display: inline-block;">Registro para Líderes y Propuestas Comunitarias</a>
                         </div>
                         <p style="text-align: center; color: #888; font-size: 1rem; max-width: 700px; margin: 0 auto;">
                             <em>Nota: El proceso es ágil, práctico y transparente. La documentación y los acuerdos se adaptan a cada caso, garantizando satisfacción y seguridad para todas las partes.</em>
